jte basics lesson update

--- a/learning-labs/modules/jte-the-basics/pages/3-first-libraries.adoc
+++ b/learning-labs/modules/jte-the-basics/pages/3-first-libraries.adoc
@@ -1,6 +1,8 @@
 = Create the Libraries
 
-In the previous section we created a pipeline template that invoked `build()` and `static_code_analysis()` steps.
+:github-basics: https://git-scm.com/docs/gittutorial#_making_changes
+
+In the previous section we created a Pipeline Template that invoked `build()` and `static_code_analysis()` steps.
 
 In this part of the lab, we're going to create libraries for these steps to implement them in our template.
 
@@ -10,11 +12,18 @@ Libraries can either be packaged into a separate plugin for distribution or fetc
 
 Retrieving libraries from a repository is the most common way of storing pipeline libraries for integration with the Jenkins Templating Engine (JTE).
 
-Go ahead and create a new GitHub repository. It can be named whatever you like, though `jte-the-basics` would make sense.
+Go ahead and create a new GitHub repository in your account:
+
+. Click your profile picture in GitHub, and go to `Your repositories`.
+. Click the `New` button at top right and use the following configuration:
+
+image::jte_basics_repo_creation.png[]
+
+It can be named whatever you like, though `jte-the-basics` would make sense.
 
 == Create the Libraries
 
-Create the following directory structure within your repository:
+Clone your new repository, then create and push the following directory structure, with empty files:
 
 [source,]
 ----
@@ -30,10 +39,16 @@ Create the following directory structure within your repository:
 
 [IMPORTANT]
 ====
+If you need a primer on Git (i.e. how to commit and push code changes) try reading over the `Making changes` section {github-basics}[here].
+
 When configuring this repository as a *Library Source* for JTE in Jenkins, you will be able to configure the base directory. Since there might be other sources in this repository in the future, all of the libraries we create will be stored in the `libraries` directory.
 ====
 
-It is important to understand that a library in JTE is just a _directory_, likely in a source code repository, that contains a steps directory with groovy files. When a library is loaded, each groovy file in the library's steps directory will become a step named after the base filename.
+It is important to understand that a library in JTE is just a _directory_, likely in a source code repository, that contains a steps directory with Groovy script files. When a library is loaded, each Groovy file in the library's steps directory will become a step named after the base filename.
+
+Push the code to the `main` branch. Your repo in the GitHub web UI should look like this:
+
+image::jte_basics_initial_repo.png[]
 
 == Implement the Steps
 
@@ -46,11 +61,13 @@ Generally, the most idiomatic way to define a step is to create a `call` method 
 In future labs, we'll learn how to pass information to our steps through the pipeline configuration file.
 ====
 
+Push the following code to the empty files you created in your library repo:
+
 .libraries/maven/steps/build.groovy
 [source,groovy]
 ----
-void call(){
-    stage("Maven: Build"){
+void call() {
+    stage("Maven: Build") {
         println "build from the maven library"
     }
 }
@@ -59,8 +76,8 @@ void call(){
 .libraries/sonarqube/steps/static_code_analysis.groovy
 [source,groovy]
 ----
-void call(){
-    stage("SonarQube: Static Code Analysis"){
+void call() {
+    stage("SonarQube: Static Code Analysis") {
         println "static code analysis from the sonarqube library"
     }
 }
@@ -72,22 +89,23 @@ Now that we have a GitHub repository containing pipeline libraries, we have to t
 
 This is done by configuring a *Library Source* in Jenkins.
 
-[NOTE]
-====
-You can define as many Library Sources as you need. They can be defined globally for the entire Jenkins instance in `Manage Jenkins > Configure System >  Jenkins Templating Engine` or under the `Jenkins Templating Engine` configuration section on Folders.
-====
+To make our libraries accessible to every job configured to use JTE on the Jenkins instance:
 
-To make our libraries accessible to every job configured to use JTE on the Jenkins instace:
-
-. In the lefthand navigation menu, click `Manage Jenkins`
-. Select the first option, `Configure System`
-. Scroll down to the `Jenkins Templating Engine` configuration section
-. Click `Add` under `Library Sources` -- do not edit the `Pipeline Configuration` section
-. Ensure the `Library Provider` is set to `From SCM`
-. Select `Git` as the `SCM` type
-. Enter the *https* repository URL
-. In the `Credentials` drop down menu, select the github credential created during the prerequisites
-. Enter `libraries` in the `Base Directory` text box
-. Click `Save`
+. In the left-hand navigation menu, click `Manage Jenkins`.
+. User `System Configuration`, click `Configure System`.
+. Scroll down to the `Jenkins Templating Engine` configuration section.
+. Click `Add` under `Library Sources` -- do not edit the `Pipeline Configuration` section.
+. Ensure the `Library Provider` is set to `From SCM`.
+. Select `Git` as the `SCM` type.
+. Enter the *https* repository URL to your library repository you pushed the Groovy scripts to. It should end in `.git`.
+. Under `Branch Specifier`, specify whatever branch you have been pushing changes to, be it `*/main`, `*/master`, or something else.
+. In the `Credentials` drop down menu, select the `github` credential created during the prerequisites.
+. Enter `libraries` in the `Base Directory` text box.
+. Click `Save`.
 
 image::library_source.gif[]
+
+[NOTE]
+====
+As an aside - you can define as many Library Sources as you need. They can be defined globally for the entire Jenkins instance in `Manage Jenkins > Configure System >  Jenkins Templating Engine` or under the `Jenkins Templating Engine` configuration section on Folders, or per-job, for more complex inheritance of libraries.
+====
