--- a/learning-labs/modules/jte-the-basics/pages/2-pipeline-job.adoc
+++ b/learning-labs/modules/jte-the-basics/pages/2-pipeline-job.adoc
@@ -1,15 +1,15 @@
 = Write the Template
 
-In JTE, instead of creating application-specific `Jenkinsfiles` we create pipeline templates that represent the business logic of a pipeline in a tool-agnostic way.
+In JTE, instead of creating application-specific `Jenkinsfiles`, we create pipeline templates that represent the business logic of a pipeline in a tool-agnostic way.
 
 == Create a Pipeline Job
 
 To demonstrate this, first create a `Pipeline` job.
 
-. From the Jenkins home page, navigate to `New Item` in the lefthand navigation menu.
-. Enter a name for the job to be created
-. Select `Pipeline` from the list of available job types
-. Click `OK`
+. From the Jenkins home page, navigate to `New Item` in the left-hand navigation menu.
+. Enter an item name for the job to be created. You can use `single-job`.
+. Select `Pipeline` from the list of available job types.
+. Click `OK`.
 
 image::create_pipeline_job.gif[]
 
@@ -17,7 +17,7 @@ image::create_pipeline_job.gif[]
 
 === Overview
 
-For this lab, let's create a pipeline that can build an artifact with maven and then perform static code analysis with SonarQube.
+For this lab, let's create a pipeline that can build an artifact with Maven and then perform static code analysis with SonarQube.
 
 Scroll down on the job's configuration page to the `Pipeline` configuration section.
 
@@ -30,12 +30,12 @@ In the `Jenkinsfile` text box, enter:
 [source,groovy]
 ----
 build()
-static_code_analysis() 
+static_code_analysis()
 ----
 
 [NOTE]
 ====
-A word on vocabulary: The entire script above is called a *Pipeline Template*. Pipeline Templates invoke *steps*, in this case build & static_code_analysis, that are implemented by *libraries*.
+A word on vocabulary: The entire script above is called a *Pipeline Template*. Pipeline Templates invoke *steps*, in this case `build` and `static_code_analysis`, that are implemented by *libraries*.
 ====
 
-You can click `Apply` to save your progress. In the next section we'll be creating the pipeline libraries that implement the `build()` and `static_code_analysis()` steps.
+You can click `Save` to save this configuration. In the next section we'll be creating the pipeline libraries that implement the `build` and `static_code_analysis` steps.
