--- a/learning-labs/modules/jte-the-basics/pages/5-swap-to-gradle.adoc
+++ b/learning-labs/modules/jte-the-basics/pages/5-swap-to-gradle.adoc
@@ -4,17 +4,17 @@
 ====
 The purpose of the Jenkins Templating Engine is three fold:
 
-.  *Optimizing pipeline code reuse*
+.  *Optimize pipeline code reuse*.
 
 Now organizations can coalesce around a portfolio of centralized, reusable pipeline libraries representing different tool integrations for their CI/CD pipelines.
 
 [start=2]
-. *Simplify pipeline maintainability*
+. *Simplify pipeline maintainability*.
 
-Separating a pipeline into a templates, configuration file, and pipeline libraries can also be thought of as separating the *business logic* of your pipeline from the *technical implementation*. In our experience, it is significantly easier to manage a template backed by modularized pipeline libraries than it is to manage application-specific Jenkinsfiles.
+Separating a pipeline into templates, configuration files, and pipeline libraries can also be thought of as separating the *business logic* of your pipeline from the *technical implementation*. In our experience, it is significantly easier to manage a template backed by modularized pipeline libraries than it is to manage application-specific Jenkinsfiles.
 
 [start=3]
-. *Organizational Governance*
+. *Provide organizational governance*.
 
 With the traditional Jenkinsfile defined within, and duplicated across, source code repositories it can be very challenging to ensure the same process is being followed by disparate application development teams and confirm that organizational policies around code quality and security are being met. JTE brings a level of governance to your pipelines by centralizing the definition of the pipeline workflow to a common place.
 ====
@@ -25,7 +25,7 @@ All we would have to do is create a `gradle` library that implements the `build(
 
 == Create the Gradle Library
 
-Remember that a library is just a subdirectory within the `Base Directory` configured as part of the Library Source in Jenkins. So to create the `gradle`  library we should create a `gradle` directory under the `libraries` directory.
+Remember that a library is just a subdirectory within the `Base Directory` configured as part of the Library Source in Jenkins. So to create the `gradle` library we should create a `gradle` directory under the `libraries` directory.
 
 Then, to implement the `build()` step for the pipeline, create a `build.groovy` file within the newly created `gradle` subdirectory.
 
@@ -46,12 +46,12 @@ When you have created the new `gradle` directory and `build.groovy` file, your r
             └── static_code_analysis.groovy
 ----
 
-The contents of the `build.groovy` should be:
+The contents of `build.groovy` should be:
 
 [source,groovy]
 ----
-void call(){
-    stage("Gradle: Build"){
+void call() {
+    stage("Gradle: Build") {
         println "build from the gradle library"
     }
 }
@@ -59,20 +59,20 @@ void call(){
 
 [NOTE]
 ====
-If you added this library on your local computer instead of through the GitHub UI, then please make sure you've pushed this change to the master branch of the repository.
+Please make sure you've pushed this change to the main/master branch of your library repository.
 ====
 
 == Swap from Maven to Gradle
 
-Now that we have a swappable implementation for the `build()` step of the pipeline template, switching from Maven to Gradle is as easy as changing the pipeline configuration.
+Now that we have a swappable implementation for the `build()` step of the pipeline template, switching from Maven to Gradle is as easy as changing the libraries listed in the pipeline configuration.
 
-Going back to the job configuration, in the `Pipeline Configuration` text box, swap the `maven` line to `gradle` and click `Save`.
+Going back to the job configuration (click the `single-job` from Jenkins home page, then `Configure`), in the `Pipeline Configuration` text box, swap the `maven` line to `gradle` and click `Save`.
 
 The pipeline configuration should now be:
 
 [source,groovy]
 ----
-libraries{
+libraries {
     gradle
     sonarqube
 }
@@ -80,35 +80,25 @@ libraries{
 
 == Run the Pipeline
 
-Follow the same steps as before to run the job again and checkout the build logs:
+Follow the same steps as before to run the job again and checkout the build logs (`Console Output` after clicking the build number):
 
 [source,text]
 ----
 Started by user admin
-Running in Durability level: MAX_SURVIVABILITY
-[Pipeline] Start of Pipeline
 [JTE] Pipeline Configuration Modifications (show)
-[JTE] Loading Library gradle (show)
-[JTE] Library gradle does not have a configuration file.
-[JTE] Loading Library sonarqube (show)
-[JTE] Library sonarqube does not have a configuration file.
 [JTE] Obtained Pipeline Template from job configuration
-[Pipeline] node
-Running on Jenkins in /var/jenkins_home/workspace/single-job
-[Pipeline] {
-[Pipeline] writeFile
-[Pipeline] archiveArtifacts
-Archiving artifacts
-[Pipeline] }
-[Pipeline] // node
-[JTE] [Step - gradle/build.call()]
+[JTE] Loading Library gradle (show)
+[JTE] Loading Library sonarqube (show)
+[JTE] Template Primitives are overwriting Jenkins steps with the following names: (show)
+[Pipeline] Start of Pipeline
+[JTE][Step - gradle/build.call()]
 [Pipeline] stage
 [Pipeline] { (Gradle: Build)
 [Pipeline] echo
 build from the gradle library
 [Pipeline] }
 [Pipeline] // stage
-[JTE] [Step - sonarqube/static_code_analysis.call()]
+[JTE][Step - sonarqube/static_code_analysis.call()]
 [Pipeline] stage
 [Pipeline] { (SonarQube: Static Code Analysis)
 [Pipeline] echo
@@ -118,3 +108,5 @@ static code analysis from the sonarqube library
 [Pipeline] End of Pipeline
 Finished: SUCCESS
 ----
+
+Congrats! You've demonstrated the value of being able to quickly substitute one library for another to fulfill the same step in the Pipeline Template.
