update jte primitives lesson up to keywords

--- a/learning-labs/modules/jte-primitives/pages/1-prerequisites.adoc
+++ b/learning-labs/modules/jte-primitives/pages/1-prerequisites.adoc
@@ -2,13 +2,13 @@
 
 == Jenkins Instance
 
-A Jenkins instance will be required for this lab. If you don't have one available to you, we would recommend going through the xref:local-development:index.adoc[Local Development] learning lab to deploy a local Jenkins instance through Docker.
+A Jenkins instance will be required for this lab. If you don't have one available to you, we recommend going through the xref:local-development:index.adoc[Local Development] Learning Lab to deploy a local Jenkins instance through Docker.
 
 == JTE: The Basics
 
 This lab continues to build upon our knowledge of the Jenkins Templating Engine so first completing the `JTE: The Basics <JTE The Basics>` lab would be very helpful.
 
-This lab will assume we're using the same pipeline configuration repository used during The Basics lab and that it is already configured as a Library Source in the Global Governance Tier.
+In this lab we will assume you're using the same pipeline configuration repository used during The Basics lab and that it is already configured as a Library Source in the Global Governance Tier.
 
 === Remove the Global Governance Tier's Pipeline Configuration
 
@@ -16,14 +16,14 @@ For the purposes of this lab, we will only be using the Pipeline Job type. In JT
 
 If this is still configured, remove it.
 
-. From the Jenkins homepage, Click `Manage Jenkins` in the lefthand navigation menu
-. Click `Configure System`
-. Scroll down to the `Jenkins Templating Engine` configuration section
-. Under `Pipeline Configuration` dropdown menu, select `None`
-. Remove any text in the `Configuration Base Directory` text box
-. Click `Save`
+. From the Jenkins homepage, Click `Manage Jenkins` in the left-hand navigation menu.
+. Under `System Configuration` click `Configure System`.
+. Scroll down to the `Jenkins Templating Engine` configuration section.
+. Remove any text in the `Configuration Base Directory` text box.
+. Under `Pipeline Configuration` drop-down menu, select `None`.
+. Click `Save`.
 
 [NOTE]
 ====
-There should still be a global Library Source configured. Leave that there.
+There should still be a global Library Source configured. Leave it as-is.
 ====
