--- a/learning-labs/modules/jte-primitives/pages/4-application-environments.adoc
+++ b/learning-labs/modules/jte-primitives/pages/4-application-environments.adoc
@@ -2,37 +2,37 @@
 
 == What is an Application Environment?
 
-Performing an automated deployment is a ubiquitious step in continuous delivery pipelines.
+Performing an automated deployment is a ubiquitous step in continuous delivery pipelines.
 
-Libraries can implement steps to perform deployments and, when doing so, need a mechanism to tell the deployment step which application environment is being deployed to.
+Libraries can implement steps to perform deployments and, in doing so, need a mechanism to tell the deployment step which application environment is being deployed to.
 
-The Application Environment acts to encapsulate the contextual information that identifies and differentiates an applications different application environments.
+The Application Environment acts to encapsulate the contextual information that identifies and differentiates an application's environments, such as "dev", "test", and "production".
 
 In general, library steps should not accept input parameters. Deployment steps are one of the few exceptions to this rule.
 
 [NOTE]
 ====
-xref:jte:primitives:application_environments.adoc[View the Application Environment documentation]
+xref:jte:primitives:application_environments.adoc[View the Application Environments documentation.]
 ====
 
 === A Word on Input Parameters to Library Steps
 
 Understanding _why_, in general, library steps should not accept input parameters is fundamental to understanding the goals of the Jenkins Templating Engine.
 
-Let's say we had some teams in an organization leveraging SonarQube for static code analysis and others using Fortify. If the `static_code_analysis` step implemented by the `sonarqube` library took input parameters - it would then require that *every* library that implements `static_code_analysis` take input parameters lest you break the interchangeability of libraries to use the same template.
+Let's say we had some teams in an organization leveraging SonarQube for static code analysis and others using Fortify. If the `static_code_analysis` step implemented by the `sonarqube` library took input parameters - it would then require that *every* library that implements `static_code_analysis` take the same input parameters, lest you break the interchangeability of libraries to use the same template.
 
-This would mean that the `fortify`'s implementation would have to take the *same* input parameters as the `sonarqube`'s implementation - otherwise switching between the two would break.
+This would mean that the `fortify` library's implementation would have to take the *same* input parameters as the `sonarqube`'s implementation - otherwise switching between the two would break the code.
 
-Being able to swap implementations of steps in an out through different libraries is the primary mechanism through which JTE supports creating reusable, tool-agnostic pipeline templates.
+Being able to swap implementations of steps in and out through different libraries is the primary mechanism through which JTE supports creating reusable, tool-agnostic Pipeline Templates.
 
-It's understandable that library steps require some externalized configuration as to not hard-code dependencies like server locations, thresholds for failure, etc. This is why library configuration is done through the pipeline configuration file and passed directly to the steps through an autowired variable as opposed to directly via input parameters.
+It's understandable that library steps require some externalized configuration to avoid hard-coding dependencies like server locations, thresholds for failure, etc. This is why library configuration is done through the pipeline configuration file and passed directly to the steps through the JTE plugin as opposed to directly via input parameters.
 
 [NOTE]
 ====
-You can read more about how to externalize library configuration xref:1.7.1:jte:library-development:externalizing_config.adoc[here].
+You can read more about how to externalize your library configuration xref:1.6:jte:library-development:externalizing_config.adoc[here].
 ====
 
-Deployment steps are different. It is safe to assume that every step that performs a deployment needs to know some environment context.
+Deployment steps are different. It is safe to assume that every step that performs a deployment needs to know some information about the environment.
 
 == Define and Use an Application Environment
 
@@ -40,11 +40,13 @@ Deployment steps are different. It is safe to assume that every step that perfor
 
 Let's actually create a mock deployment library to demonstrate the utility of Application Environments.
 
-In the same repository used during JTE: The Basics, add a new library called `ansible` with a step called `deploy_to` that takes an Application Environment parameter
+In the same library repository used during JTE: The Basics, add a new library called `ansible` with a step in a directory called `steps`. Call the file `deploy_to.groovy`.
 
 [NOTE]
 ====
-Remember that libraries are just subdirectories within a source code repository and that steps are just groovy files in those subdirectories that typically implement a `call` method.
+Like Gradle, Maven, and SonarQube, you do not need to know much about Ansible to complete this lab, but there is a wealth of information about it available online if you are interested and it is a tool commonly used by DevSecOps teams.
+
+Remember that libraries are just subdirectories within a source code repository and that steps are just Groovy files in those subdirectories that typically implement a `call` method.
 ====
 
 For the sake of our pretend `ansible` library, let's assume that it needs to know a list of IP addresses relevant to the environment it's deploying to.
@@ -52,17 +54,17 @@ For the sake of our pretend `ansible` library, let's assume that it needs to kno
 .libraries/ansible/steps/deploy_to.groovy
 [source,groovy]
 ----
-void call(app_env){
-    stage("Deploy To: ${app_env.long_name}"){
-        println "performing a deployment through ansible.."
-        app_env.ip_addresses.each{ ip ->
-            println "deploying to ${ip}"
+void call(app_env) {
+    stage("Deploy to: ${app_env.long_name}") {
+        println 'Performing a deployment through Ansible..'
+        app_env.ip_addresses.each { ip ->
+            println "Deploying to ${ip}"
         }
     }
 }
 ----
 
-This step will announce it's performing an ansible deployment and then iterate over the IP addresses provided on the application environment and print out the target server.
+This step will announce it's performing an Ansible deployment and then iterate over the IP addresses provided for the application environment and print out the target server.
 
 [NOTE]
 ====
@@ -88,32 +90,37 @@ The file structure within your `libraries` directory should now be:
 
 ====
 
+[IMPORTANT]
+====
+Make sure you've pushed these changes to your global library repo's `main/master` branch before proceeding.
+====
+
 === Define the Application Environments in the Pipeline Configuration
 
 We now need to load the `ansible` library and define the Application Environments.
 
-Update the *Pipeline Configuration* to:
+In your `single-job`, go to `Configure` and change the *Pipeline Configuration* to:
 
 [source,groovy]
 ----
-libraries{
+libraries {
     maven
     sonarqube
     ansible
 }
 
-stages{
-    continuous_integration{
+stages {
+    continuous_integration {
         build
         static_code_analysis
     }
 }
 
-application_environments{
-    dev{
+application_environments {
+    dev {
         ip_addresses = [ "0.0.0.1", "0.0.0.2" ]
     }
-    prod{
+    prod {
         long_name = "Production" 
         ip_addresses = [ "0.0.1.1", "0.0.1.2", "0.0.1.3", "0.0.1.4" ]
     }
@@ -122,18 +129,18 @@ application_environments{
 
 [IMPORTANT]
 ====
-Application Environments are defined in the `application_environments` block within the pipeline pipeline configuration.
+Application Environments are defined in the `application_environments` block within the pipeline configuration.
 
 Each key defined in this block will represent an Application Environment and a variable will be made available in the pipeline template based upon this name.
 
-The only two keys that Application Environments explicitly define are `short_name` and `long_name`. These values default to the key defining the Application Environment in the Pipeline Configuration, but can be overridden.
+The only two keys that Application Environments explicitly define are `short_name` and `long_name`. These values both default to the key defining the Application Environment (i.e. `long_name` would have been `prod` and not `Production` if we had not declared it) in the Pipeline Configuration, but can be overridden.
 ====
 
 === Update the Pipeline Template
 
 Now that we have a library that performs a deployment step and Application Environments defined in the Pipeline Configuration, let's update the Pipeline Template to pull it all together.
 
-Update the *Pipeline Template* to:
+Update the *Jenkinsfile* (your default pipeline template in your `single-job`) to:
 
 [source,groovy]
 ----
@@ -149,59 +156,59 @@ These variables `dev` and `prod` come directly from the Applications Environment
 
 === Run the Pipeline
 
-From the Pipeline job's main page, click `Build Now` in the lefthand navigation menu.
+Save your configuration. From the Pipeline job's main page, click `Build Now` in the left-hand navigation menu.
 
-When viewing the build logs, you should see output similar to:
+When viewing the build logs (click Build number, then `Console Output`), you should see output similar to:
 
 [source,text]
 ----
-[Pipeline] node
-Running on Jenkins in /var/jenkins_home/workspace/single-job
-[Pipeline] {
-[Pipeline] writeFile
-[Pipeline] archiveArtifacts
-Archiving artifacts
-[Pipeline] }
-[Pipeline] // node
-[JTE] [Stage - continuous_integration]
-[JTE] [Step - maven/build.call()]
+Started by user admin
+[JTE] Pipeline Configuration Modifications (show)
+[JTE] Obtained Pipeline Template from job configuration
+[JTE] Loading Library maven (show)
+[JTE] Loading Library sonarqube (show)
+[JTE] Loading Library ansible (show)
+[JTE] Template Primitives are overwriting Jenkins steps with the following names: (show)
+[Pipeline] Start of Pipeline
+[JTE][Stage - continuous_integration]
+[JTE][Step - maven/build.call()]
 [Pipeline] stage
 [Pipeline] { (Maven: Build)
 [Pipeline] echo
 build from the maven library
 [Pipeline] }
 [Pipeline] // stage
-[JTE] [Step - sonarqube/static_code_analysis.call()]
+[JTE][Step - sonarqube/static_code_analysis.call()]
 [Pipeline] stage
 [Pipeline] { (SonarQube: Static Code Analysis)
 [Pipeline] echo
 static code analysis from the sonarqube library
 [Pipeline] }
 [Pipeline] // stage
-[JTE] [Step - ansible/deploy_to.call(ApplicationEnvironment)]
+[JTE][Step - ansible/deploy_to.call(ApplicationEnvironment)]
 [Pipeline] stage
-[Pipeline] { (Deploy To: dev)
+[Pipeline] { (Deploy to: dev)
 [Pipeline] echo
-performing a deployment through ansible..
+Performing a deployment through Ansible..
 [Pipeline] echo
-deploying to 0.0.0.1
+Deploying to 0.0.0.1
 [Pipeline] echo
-deploying to 0.0.0.2
+Deploying to 0.0.0.2
 [Pipeline] }
 [Pipeline] // stage
-[JTE] [Step - ansible/deploy_to.call(ApplicationEnvironment)]
+[JTE][Step - ansible/deploy_to.call(ApplicationEnvironment)]
 [Pipeline] stage
-[Pipeline] { (Deploy To: Production)
+[Pipeline] { (Deploy to: Production)
 [Pipeline] echo
-performing a deployment through ansible..
+Performing a deployment through Ansible..
 [Pipeline] echo
-deploying to 0.0.1.1
+Deploying to 0.0.1.1
 [Pipeline] echo
-deploying to 0.0.1.2
+Deploying to 0.0.1.2
 [Pipeline] echo
-deploying to 0.0.1.3
+Deploying to 0.0.1.3
 [Pipeline] echo
-deploying to 0.0.1.4
+Deploying to 0.0.1.4
 [Pipeline] }
 [Pipeline] // stage
 [Pipeline] End of Pipeline
