advanced features module

--- a/learning-labs/modules/jte-advanced-features/pages/1-prerequisites.adoc
+++ b/learning-labs/modules/jte-advanced-features/pages/1-prerequisites.adoc
@@ -2,10 +2,10 @@
 
 == Jenkins Instance
 
-A Jenkins instance will be required for this lab. If you don't have one available to you, we would recommend going through the `Local Development<Local Development>` learning lab to deploy a local Jenkins instance through Docker.
+A Jenkins instance will be required for this lab. If you don't have one available to you, we would recommend going through the xref:local-development:index.adoc[Local Development] Learning Lab to deploy a local Jenkins instance through Docker.
 
 == JTE: Pipeline Primitives
 
-This lab is the third and final lab specificially dedicated to the Jenkins Templating Engine's functionality.
+This lab is the third and final lab specifically dedicated to the Jenkins Templating Engine's functionality.
 
-Please be sure to have completed the xref:learning-labs:jte-primitives:index.adoc[JTE: Pipeline Primitives] lab before attempting this one as we will be picking up where that lab leaves off.
+Please be sure to have completed the xref:learning-labs:jte-primitives:index.adoc[JTE: Pipeline Primitives] lab before attempting this one, as we will be picking up where that lab leaves off.
