--- a/learning-labs/modules/jte-advanced-features/pages/index.adoc
+++ b/learning-labs/modules/jte-advanced-features/pages/index.adoc
@@ -4,6 +4,6 @@ In this lab we're going to highlight some of JTE's more advanced features.
 
 == What You'll Learn
 
-* The Default Step Implementation: how to create steps on the fly in the Pipeline Configuration
-* Pipeline Lifecycle Hooks: how to register steps to be dynamically invoked in response to pipeline events
-* Multi-Method Steps: how to create utility wrappers by defining multiple methods in a step
+* The Default Step Implementation: how to create steps on the fly in the Pipeline Configuration.
+* Pipeline Lifecycle Hooks: how to register steps to be dynamically invoked in response to pipeline events.
+* Multi-Method Steps: how to create utility wrappers by defining multiple methods in a step.
